<resources>
    <string name="app_name">WordLearning</string>

    <!-- fragment and menu titles -->
    <string name="word_translation">Word - translation</string>
    <string name="translation_word">Translation - word</string>
    <string name="right_wrong">Right - wrong</string>
    <string name="start_redactor">Redactor</string>
    <string name="results">Results</string>
    <string name="redactor">Redactor</string>
    <string name="sets">Sets</string>
    <string name="to_home">Home</string>

    <string name="reset_progress">Reset progress</string>
    <string name="reset_progress_question">Reset progress?</string>
    <string name="reset">Reset</string>

    <string name="add">Add</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="send_to_training">Send to training</string>
    <string name="what_to_do">What to do with this word?</string>
    <string name="add_to_dictionary">Add to dictionary</string>
    <string name="remove_from_dictionary">Remove from dictionary</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="next_word">Next word</string>
    <string name="wt">wt</string>
    <string name="tw">tw</string>
    <string name="about">About</string>
    <string name="open_source">Open Sours Licenses</string>

    <string name="perfect_result">Perfect!</string>
    <string name="good_result">Very good!</string>
    <string name="bad_result">You can do it better!</string>
    <string name="disaster_result">OMG..better try again</string>


    <!-- messages -->
    <string name="set_added_message">Set %1$s was added into dictionary</string>
    <string name="set_removed_message">Set %1$s was removed from dictionary</string>
    <string name="all_words_studied_message">All words studied. Please select new set or send old ones to training</string>
    <string name="training_finished">Training finished</string>
    <string name="fields_empty_message">Fields should not be empty</string>
    <string name="new_sets_loaded">New sets was loaded</string>
    <string name="num_of_words_loaded">Loaded %1$d words</string>
    <string name="you_got">You\'ve got</string>
    <string name="points_format">%1$d points</string>
    <string name="scores">Scores:</string>
    <string name="go" translatable="false">Go!</string>
    <string name="record_format">Record : %1$d</string>
    <string name="new_record">New record!</string>

    <string name="remove">Remove</string>


    <string name="bogus_text" translatable="false">Definition of content of set, and something else just for make this stupid sentese little bit longer.
        But not too long</string>


    <string name="no_words" translatable="false">No words</string>

    <string name="correct_answers">Correct answers</string>

    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_close" translatable="false">Drawer close</string>
    <string name="title_activity_set">SetActivity</string>

    <string name="about_html" translatable="false"> <![CDATA[
Программа "WordLearning" помогает учить иностранные слова. Вы можете учить готовые наборы слов, которые собраны по темам или добавлять собственные слова. <p/>Сейчас доступно два варианта тренировки: "Слово - перевод" и "Перевод - слово". В первом нужно выбирать правильный перевод для английского слова. Во втором наоборот : из четырех слов на английском, нужно выбрать то, которое соответствует переводу.<p/>

Для озвучивания слов используется  "Text-to-speech" - встроенный в систему синтезатор речи, поэтому произношение может быть не идеальным.<br/>

<h4>Автор программы Александр Карачев.</h4>
 ]]></string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="in_dictionary">In dictionary</string>
    <string name="words_learned">Words learned %1$d of %2$d</string>
    <string name="words_in_dictionary">Words in a dictionary %1$d </string>
    <string name="scores_format">Scores : %1$d</string>
    <string name="sort">sort</string>
    <string name="all_themes">All themes</string>
    <string name="start_training">Start training</string>
    <string name="training">Training</string>
    <string name="cancel">cancel</string>
    <string name="new_word">New word</string>
    <string name="press_exit_again">Press again to exit</string>

    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>

    <string name="one_more_time">One more time</string>
    <string name="repeat">Repeat</string>

    <string name="word_in_dictionary">Word in dictionary</string>

    <!-- settings -->
    <string name="enable_sounds">Enable sounds</string>
    <string name="preference_sound_key" translatable="false">sounds_enabled_pref</string>
    <string name="preference_license_key" translatable="false">preference_license</string>
    <string name="licenses_summary">Opensourse libraries used in this project.</string>
    <string name="preference_content_key" translatable="false">preference_content_key</string>
    <string name="content_license_title">Images and sounds used in project.</string>
    <string name="content_licenses">Content licenses</string>
    <string name="preference_auto_pronoun" translatable="false">auto_play_pronoun_pref</string>
    <string name="auto_play_pronoun">Play pronunciation automatically</string>
    <string name="preference_words_in_training_key" translatable="false">words_in_training</string>
    <string name="words_in_training_default">10</string>
    <string name="words_in_training_title">Words in a training</string>
    <string name="words_in_training_description">Count of words in simple trainings</string>
    <string name="rate_us_summary">Rate WordLearning if you like it.</string>
    <string name="rate_us_key" translatable="false">rate_us_pref_key</string>
    <string name="preference_rate_key" translatable="false">preference_rate</string>
    <string name="never">never</string>
    <string name="remind_me_later">Later</string>
    <string name="enable_sounds_summary">on/off funny play sounds</string>
    <string name="pronun_auto_summary">on/off auto audio pronuciation when word appears.</string>
    <string name="error_message">Sorry, somthing went wrong</string>
    <string name="click_to_translate">Click to see translation</string>
    <string name="click_to_add_or_delete">Click button to add or remove word from dictionary</string>
    <string name="click_to_listen">Click to listen pronounciation</string>
    <string name="click_to_more_info">Click to see additional info</string>
    <string name="click_to_begin_training">Click to begin training</string>
    <string name="click_to_add_set">Click to add set to your dictionary</string>
    <string name="click_and_open_card">Click any word to open as card</string>
    <string name="words_cards">Word cards</string>
    <string name="progress">Progress</string>

    <string name="dictionary">Dictionary</string>
    <string name="dictionary_description">Your dictionary</string>
    <string name="choice_action">Choice action</string>
    <string name="words_in_training">Words in a training</string>
</resources>
