<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/reset_progress"
        android:orderInCategory="10"
        android:icon="@drawable/ic_reset_white_24dp"
        android:id="@+id/menu_reset_setfrag_action"
        app:showAsAction="always"/>

    <item android:title="@string/add_to_dictionary"
        android:orderInCategory="20"
        android:icon="@drawable/ic_add_white_24dp"
        android:id="@+id/menu_add_setfrag_action"
        app:showAsAction="always"/>

    <item android:title="@string/remove_from_dictionary"
        android:orderInCategory="30"
        android:id="@+id/menu_remove_setfrag_action"
        android:icon="@drawable/ic_remove_white_24dp"
        app:showAsAction="always"/>
</menu>