<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.volgoak.wordlearning.RedactorFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/redactor_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/redactor_edit_word"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/word"/>

        <EditText
            android:id="@+id/redactor_edit_translation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/translation"/>

        <Button
            android:id="@+id/redactor_button_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/add"/>

    </LinearLayout>

    <ListView
        android:id="@+id/redactor_list_view"
        android:dividerHeight="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
