<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_layout_width"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dialog_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_word_trans_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar"
        style="@style/DialogCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:descendantFocusability="blocksDescendants"
            android:background="?selectableItemBackgroundBorderless">

            <TextView
                style="@style/DialogCardsText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_translation" />

            <ImageView
                style="@style/CyvDialog"
                android:background="@drawable/yellow_circle"
                android:src="@drawable/ic_wt"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_trans_word_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_word_trans_dialog"
        app:layout_constraintBottom_toTopOf="@+id/cv_bool_dialog"
        android:layout_marginBottom="@dimen/views_vertical_margin"
        style="@style/DialogCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:descendantFocusability="blocksDescendants"
        android:background="?selectableItemBackgroundBorderless">

        <TextView
            style="@style/DialogCardsText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/translation_word" />

        <ImageView
            style="@style/CyvDialog"
            android:background="@drawable/yellow_circle"
            android:src="@drawable/ic_tw"/>
    </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_bool_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_trans_word_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/views_vertical_margin"
        style="@style/DialogCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:descendantFocusability="blocksDescendants"
            android:background="?selectableItemBackgroundBorderless">

            <TextView
                style="@style/DialogCardsText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/right_wrong" />

            <ImageView
                style="@style/CyvDialog"
                android:background="@drawable/yellow_circle"
                app:srcCompat="@drawable/ic_training_24dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>