<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="xyz.volgoak.wordlearning.fragment.ResultBoolFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_result"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/iv_result_height"
                    android:layout_margin="@dimen/views_horizontal_margin"
                    android:background="@drawable/gray_rectangle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_train_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/views_vertical_margin"
                    android:text="@string/training_finished"
                    android:textSize="@dimen/large_text_size"
                    app:layout_constraintLeft_toLeftOf="@+id/iv_result"
                    app:layout_constraintRight_toRightOf="@+id/iv_result"
                    app:layout_constraintTop_toTopOf="@+id/iv_result" />


                <TextView
                    android:id="@+id/tv_you_got"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_got"
                    android:layout_marginTop="@dimen/views_vertical_margin"
                    android:textSize="@dimen/not_so_big_text"
                    app:layout_constraintLeft_toLeftOf="@id/iv_result"
                    app:layout_constraintRight_toRightOf="@id/iv_result"
                    app:layout_constraintTop_toBottomOf="@id/tv_train_finish"
                    app:layout_constraintBottom_toTopOf="@+id/tv_scores"/>

                <TextView
                    android:id="@+id/tv_scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1000 points"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="@dimen/large_text_size"
                    app:layout_constraintBottom_toTopOf="@id/iv_star_record"
                    app:layout_constraintLeft_toLeftOf="@id/iv_result"
                    app:layout_constraintRight_toRightOf="@id/iv_result"
                    app:layout_constraintTop_toBottomOf="@id/tv_you_got" />

                <ImageView
                    android:id="@+id/iv_star_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_star_24dp"
                    android:layout_margin="@dimen/views_small_margin"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="@id/iv_result"
                    app:layout_constraintBottom_toBottomOf="@id/iv_result"
                    app:layout_constraintRight_toLeftOf="@+id/tv_record"
                    />

                <TextView
                    android:id="@+id/tv_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="@id/iv_result"
                    app:layout_constraintLeft_toRightOf="@id/iv_star_record"
                    app:layout_constraintBottom_toBottomOf="@id/iv_star_record"
                    app:layout_constraintTop_toTopOf="@id/iv_star_record"
                    tools:text="Record : 1000"/>


                <android.support.v7.widget.CardView
                    android:id="@+id/cv_again_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_result"
                    style="@style/MenuCards">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:descendantFocusability="blocksDescendants"
                        android:background="?selectableItemBackgroundBorderless">

                        <TextView
                            style="@style/CardsText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/repeat" />

                        <ImageView
                            style="@style/Cyv_menu"
                            android:background="@drawable/yellow_circle"
                            app:srcCompat="@drawable/ic_training_24dp"
                            android:scaleType="fitCenter"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_dictionary_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_again_result"
                    style="@style/MenuCards">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:descendantFocusability="blocksDescendants"
                        android:background="?selectableItemBackgroundBorderless">

                        <TextView
                            style="@style/CardsText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/redactor" />

                        <ImageView
                            style="@style/Cyv_menu"
                            android:background="@drawable/yellow_circle"
                            app:srcCompat="@drawable/ic_dictionary_white_24dp"
                            android:scaleType="fitCenter"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_sets_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_dictionary_result"
                    style="@style/MenuCards">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:descendantFocusability="blocksDescendants"
                        android:background="?selectableItemBackgroundBorderless">

                        <TextView
                            style="@style/CardsText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sets" />

                        <ImageView
                            style="@style/Cyv_menu"
                            android:background="@drawable/yellow_circle"
                            app:srcCompat="@drawable/ic_sets_white_24dp"
                            android:scaleType="fitCenter"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>